* Add XP scaling tables for scaling enemy reward XP based on enemy level.
* Replace 'immunity' effects with percentage-based resistances.
* Added 'mouse_move_deadzone' property to engine/misc.txt to help alleviate erratic mouse-move behavior when the cursor is near the player.
* Alternative tab UI for when tabs exceed the available space.

Engine fixes:

* Fixed set item tooltips showing incorrect number of equipped items if a set item was on an inactive loadout.
* Fixed dev console commands not working if they were preceded by whitespace.
* Fixed spawning entities not counting towards summoned entity count.
* Fix broken gamepad navigation after closing Powers menu while on a non-default tab.

Game updates:

* Fireball and Ice Bolt scrolls now give the player a 10 second period in which their basic attacks (Swing, Shoot, Channel) are replaced with the scroll power.
* Fixed the naming of scroll damage as it appears in power description tooltips.

Translation updates:

* German (de) update (Wuzzy2)
* Japanese (ja) update (Sato Hayato)
* Chinese (zh) update (Issac Zhang)



Flare v1.13.04

Engine features:

* Added 'bar_gfx' property to menus/enemy.txt for setting the "fill" image

Engine fixes:

* Fix crash when trying to read a non-existent file with INCLUDE
* Fix passive powers not being correctly re-applied after death
* Improve performance of WidgetListBox by caching all items instead of just the visible ones



Flare v1.13 (https://flarerpg.org/2022/01/31/flare-1-13/)

Engine features:

* Added additional requirement properties (requires_status, requires_item, etc) to enemy and NPC map objects. The properties now match what is available for map events.
* When 'mouse aim' is disabled, the Shift key can now be used with the direction keys to change the player's orientation without moving.
* Added optional 'fog-of-war' feature (r-a-cristian-93)
* Added support for multiple sets/loadouts of equipped items (r-a-cristian-93)