@@ -906,7 +906,9 @@ code {
 
 <p><strong>default.log</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Log".</p>
 
-<p><strong>default.equipment_swap</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Equipment Swap".</p>
+<p><strong>default.equipment_swap</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Next Equip Set".</p>
+
+<p><strong>default.equipment_swap_prev</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Previous Equip Set".</p>
 
 <p><strong>default.minimap_mode</strong> | <code>[int, string], int : Bind, Type</code> | Bindings for "Mini-map Mode".</p>
 
