@@ -28,48 +28,51 @@ namespace Input {
 	// Input action enum
 	enum {
 		CANCEL = 0,
-		ACCEPT = 1,
-		UP = 2,
-		DOWN = 3,
-		LEFT = 4,
-		RIGHT = 5,
-		BAR_1 = 6,
-		BAR_2 = 7,
-		BAR_3 = 8,
-		BAR_4 = 9,
-		BAR_5 = 10,
-		BAR_6 = 11,
-		BAR_7 = 12,
-		BAR_8 = 13,
-		BAR_9 = 14,
-		BAR_0 = 15,
-		CHARACTER = 16,
-		INVENTORY = 17,
-		POWERS = 18,
-		LOG = 19,
-		MAIN1 = 20,
-		MAIN2 = 21,
-		EQUIPMENT_SWAP = 22,
-		MINIMAP_MODE = 23,
-		LOOT_TOOLTIP_MODE = 24,
-		ACTIONBAR = 25,
-		MENU_PAGE_NEXT = 26,
-		MENU_PAGE_PREV = 27,
-		MENU_ACTIVATE = 28,
-		PAUSE = 29,
-		AIM_UP = 30,
-		AIM_DOWN = 31,
-		AIM_LEFT = 32,
-		AIM_RIGHT = 33,
-		DEVELOPER_MENU = 34,
+		ACCEPT,
+		UP,
+		DOWN,
+		LEFT,
+		RIGHT,
+		BAR_1,
+		BAR_2,
+		BAR_3,
+		BAR_4,
+		BAR_5,
+		BAR_6,
+		BAR_7,
+		BAR_8,
+		BAR_9,
+		BAR_0,
+		CHARACTER,
+		INVENTORY,
+		POWERS,
+		LOG,
+		MAIN1,
+		MAIN2,
+		EQUIPMENT_SWAP,
+		EQUIPMENT_SWAP_PREV,
+		MINIMAP_MODE,
+		LOOT_TOOLTIP_MODE,
+		ACTIONBAR,
+		MENU_PAGE_NEXT,
+		MENU_PAGE_PREV,
+		MENU_ACTIVATE,
+		PAUSE,
+		AIM_UP,
+		AIM_DOWN,
+		AIM_LEFT,
+		AIM_RIGHT,
+		DEVELOPER_MENU,
 
 		// non-modifiable
-		CTRL = 35,
-		SHIFT = 36,
-		ALT = 37,
-		DEL = 38,
-		TEXTEDIT_UP = 39,
-		TEXTEDIT_DOWN = 40,
+		CTRL,
+		SHIFT,
+		ALT,
+		DEL,
+		TEXTEDIT_UP,
+		TEXTEDIT_DOWN,
+
+		KEY_COUNT,
 	};
 }
 
@@ -105,7 +108,7 @@ protected:
 
 public:
 	static const bool GET_SHORT_STRING = true;
-	static const int KEY_COUNT = 41;
+	static const int KEY_COUNT = Input::KEY_COUNT;
 	static const int KEY_COUNT_USER = KEY_COUNT - 6; // exclude CTRL, SHIFT, etc from keybinding menu
 
 	enum {
